Rainfall/src/rainfall/native/Graphics.cs


			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern IntPtr Graphics_CreateShader(IntPtr vertexMemory, IntPtr fragmentMemory);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern unsafe ushort Graphics_ShaderGetUniform(IntPtr shader, byte* name, UniformType type, int num);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern ushort Graphics_ShaderGetUniform(IntPtr shader, [MarshalAs(UnmanagedType.LPStr)] string name, UniformType type, int num);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern ushort Graphics_CreateRenderTarget(int numAttachments, ref RenderTargetAttachment attachmentInfo, [MarshalAs(UnmanagedType.LPArray)] ushort[] textures, ref TextureInfo textureInfos);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_DestroyRenderTarget(ushort renderTarget);


			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_ResetState();

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetBlendState(BlendState blendState);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetDepthTest(DepthTest depthTest);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetDepthWrite(byte write);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetCullState(CullState cullState);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetPrimitiveType(PrimitiveType primitiveType);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetVertexBuffer(ushort handle);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetDynamicVertexBuffer(ushort handle);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetTransientVertexBuffer(ref TransientVertexBufferData buffer);
			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetTransientVertexBuffer(IntPtr buffer);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetIndexBuffer(ushort handle);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetDynamicIndexBuffer(ushort handle);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetTransientIndexBuffer(ref TransientIndexBufferData buffer);
			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetTransientIndexBuffer(IntPtr buffer);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetInstanceBuffer(ref InstanceBufferData buffer);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetInstanceBufferN(ref InstanceBufferData buffer, int offset, int count);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetComputeBuffer(int stage, ushort handle, ComputeAccess access);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern unsafe void Graphics_SetUniform(ushort handle, void* value, int num);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetTexture(ushort sampler, int unit, ushort texture, uint flags);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetComputeTexture(int stage, ushort texture, int mip, ComputeAccess access);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetViewMode(int pass, int viewMode);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetRenderTarget(int pass, ushort renderTarget, int width, int height);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetRenderTargetR(int pass, ushort renderTarget, BackbufferRatio ratio);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_ClearRenderTarget(int pass, ushort renderTarget, byte hasRGB, byte hasDepth, uint rgba, float depth);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetTransform(int pass, ref Matrix transform);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_SetViewTransform(int pass, ref Matrix projection, ref Matrix view);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_Draw(int pass, IntPtr shader);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern unsafe void Graphics_DrawText(int pass, int x, int y, float z, float scale, int viewportHeight, byte* text, int offset, int count, IntPtr font, uint color, IntPtr batch);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern unsafe void Graphics_DrawText(int pass, int x, int y, float z, float scale, int viewportHeight, [MarshalAs(UnmanagedType.LPStr)] string text, int offset, int count, IntPtr font, uint color, IntPtr batch);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern unsafe void Graphics_DrawDebugText(int x, int y, byte color, byte* text);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_DrawDebugText(int x, int y, byte color, [MarshalAs(UnmanagedType.LPStr)] string text);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_GetDebugTextSize(out int width, out int height);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_ComputeDispatch(int pass, IntPtr shader, int numX, int numY, int numZ);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_Blit(int pass, ushort dst, ushort src);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_BlitEx(int pass, ushort dst, int dstMip, int dstX, int dstY, int dstZ, ushort src, int srcMip, int srcX, int srcY, int srcZ, int width, int height, int depth);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_CompleteFrame();

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern void Graphics_GetRenderStats(out RenderStats renderStats);

			[DllImport(Native.DllName, CallingConvention = CallingConvention.Cdecl)]
			internal static extern int Graphics_DrawDebugInfo(int x, int y, byte color);
		}
	}
}
